kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: init-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: init-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: init-frontend
    spec:
      serviceAccountName: init-frontend
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: false # nginx (base image) wants to run master process as root
        runAsUser: 0 # nginx (base image) wants to run master process as root
        runAsGroup: 3000
        fsGroup: 2000
      containers:
        - name: init-frontend
          image: init-frontend:v1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: "0.5"
              memory: 0.5Gi
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 60
            httpGet:
              port: 80
              path: /health
          securityContext:
            allowPrivilegeEscalation: true # nginx (base image) wants to run master process as root
            privileged: true # nginx (base image) wants to run master process as root
            readOnlyRootFilesystem: false # nginx (base image) wants to create temp files
            capabilities:
              drop:
                - ALL
