kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: init-frontend
spec:
  selector:
    app: init-frontend
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
