kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: init-frontend
spec:
  ingressClassName: nginx
  rules:
    - host: init-frontend.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: init-frontend
                port:
                  name: http
